# float-chat-1

./: .gitignore  README.md  add_indexed.py  app.py  backend.py  backend_local_model.py  inspec_nc.py  main.py  profile_dash.py  pyproject.toml  requirements.txt  vector_db.py
static/: index.html
static/js/: main.js
templates/: dashboard.html  profiles.html
